# Detecting_Tcp_Attack

./: .dockerignore  .env.example  .gitattributes  .gitignore  CAPTURE_SETUP.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  visualize_results.py
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  advanced_detection.py  alerting.py  analyze_dataset.py  behavioral_baseline.py  capture.py  capture_windows.py  config.py  cpp_detector_wrapper.py  cpp_endpoints.py  database.py  dataset_preprocessor.py  evaluator.py  explainability.py  feature_extractor.py  flow_builder.py  forensics.py  generate_cpp_test_data.py  generate_test_data.py  main.py  ml_model.py  network_topology.py  populate_advanced_data.py  populate_correlation_data.py  populate_cwnd_data.py  populate_topology.py  protocol_handlers.py  protocol_scorer.py  requirements.txt  scorer.py  test_cpp_engine.py  threat_intel.py
backend/tests/: test_flow_builder.py  test_scorer.py
cpp_engine/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  build.bat  build_simple.bat  setup.py
cpp_engine/include/: adversarial_defense.hpp  cross_flow_correlation.hpp  cwnd_detector.hpp  cwnd_fingerprinting.hpp  protocol_agnostic.hpp  qos_detector.hpp  simd_statistics.hpp  zero_day_detector.hpp
cpp_engine/src/: adversarial_defense.cpp  bindings.cpp  cross_flow_correlation.cpp  cwnd_detector.cpp  cwnd_fingerprinting.cpp  protocol_agnostic.cpp  qos_detector.cpp  simd_statistics.cpp  zero_day_detector.cpp
docs/: PATENT_CLAIMS.md  PROJECT_EVALUATION.md  PROJECT_PITCH.md  UPDATED_PATENT_CLAIMS.md  datasets.md  evaluation_report.md  layer_mapping.md  new_endpoints.md
frontend/: Dockerfile  FRONTEND_IMPLEMENTATION.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: .dockerignore  App.css  App.jsx
frontend/src/components/: AdversarialRobustness.css  AdversarialRobustness.jsx  AlertHeatmap.css  AlertHeatmap.jsx  AlertPanel.jsx  AlertSummary.jsx  AlertsView.css  AlertsView.jsx  AnalyticsSection.jsx  BehavioralBaseline.css  BehavioralBaseline.jsx  CWNDFingerprinting.css  CWNDFingerprinting.jsx  Controls.jsx  CrossFlowCorrelation.css  CrossFlowCorrelation.jsx  DashboardView.css  DashboardView.jsx  FlowDetailPanel.jsx  FlowTable.jsx  GlobalStatus.jsx  ImbalanceBanner.jsx  NetworkTopology.css  NetworkTopology.jsx  PerformanceMetrics.css  PerformanceMetrics.jsx  ProtocolAgnostic.css  ShapExplainer.css  (+9 more)
scripts/: prepare_dataset.py  split_dataset.py
